--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^0.27.2",
+    "react-paginate": "^8.1.3",
+    "react-redux": "^8.0.2",
+    "ethers": "^5.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
