--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@walletconnect/web3-provider": "^1.8.0",
     "axios": "^0.27.2",
     "Buffer": "^0.0.0",
     "ethers": "^5.6.2",
@@ -22,7 +23,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3modal": "^1.9.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,6 +59,7 @@
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "util": "^0.12.4"
   }
 }
