--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "Buffer": "^0.0.0",
     "ethers": "^5.6.2",
+    "json2csv": "^5.0.7",
     "patch-package": "^6.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
