--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postinstall": "patch-package",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
