update for react snap

--- a/package.json
+++ b/package.json
@@ -43,6 +43,13 @@
       "react-app/jest"
     ]
   },
+  "reactSnap": {
+    "puppeteerArgs": [
+      "--no-sandbox",
+      "--disable-setuid-sandbox"
+    ],
+    "puppeteerExecutablePath": "/opt/google/chrome/google-chrome"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
